--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/Index.jsx"></script>
+    <script type="module" src="./src/Index.tsx"></script>
   </body>
 </html>
